--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,29 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+ul,
+ol {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+nav .btn-busqueda {
+  border: none;
+  background-color: transparent;
+  translate: -32px;
+}
+nav .btn-busqueda i {
+  font-size: 1rem;
+}
 
 /*# sourceMappingURL=styles.css.map */
