Se trabajo sobre el index js

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,10 @@ nav .btn-busqueda i {
   font-size: 1rem;
 }
 
+.navbar-toggler {
+  font-size: 1rem;
+}
+
 .btn-ingresar {
   display: block;
   width: 100%;
