--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -16,3 +16,21 @@ a {
 img {
   max-width: 100%;
 }
+
+@mixin tablet {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin netbook {
+  @media (min-width: 991px) {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media (min-width: 1024px) {
+    @content;
+  }
+}
