--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -9,6 +9,9 @@
 .ofertas {
   margin-top: 1rem;
   border-radius: 1%;
+  hr {
+    margin: auto;
+  }
   &__titulo {
     height: 60px;
     h2 {
@@ -16,7 +19,7 @@
       font-size: 1.5rem;
     }
     hr {
-      translate: 0 -25px;
+      translate: 0 -15px;
     }
   }
   &__articulo {
@@ -83,6 +86,52 @@
     i {
       font-size: 3rem;
       color: #0d6efd;
+    }
+  }
+}
+.gift {
+  background: linear-gradient(90deg, #a90f90 55%, #0c1a51);
+  padding: 1rem 1.5rem;
+  color: #fff;
+
+  &__price-container {
+    border-left: 2px solid #fff;
+    display: flex;
+    flex-direction: column;
+    font-weight: 600;
+    line-height: 1;
+    padding-left: 8px;
+    position: relative;
+    text-align: left;
+  }
+
+  &__price-desc {
+    font-size: 1.2rem;
+  }
+  &__price {
+    font-size: 1.8rem;
+  }
+}
+
+.categorias {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  gap: 1rem;
+  padding-top: 1rem;
+
+  &__articulo {
+    height: 169px;
+    width: 95%;
+    background-color: #fff;
+    border-bottom: 1px solid #eae6e6;
+    border-right: 1px solid #eae6e6;
+    border-radius: 2px;
+    a {
+      width: 100%;
+      img {
+        width: 40%;
+      }
     }
   }
 }
