--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   width: 100%;
   padding: 1rem;
+  color: #4467d6;
   i {
     display: inline-block;
     font-size: 1.2rem;
