se trabajo sobre el codigo js para agregar productos al carrito

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,3 +2,5 @@
 @import "./components/header";
 @import "./components/buttons";
 @import "./pages/index.scss";
+@import "./components/footer";
+@import "./pages/productos";
