--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -6,7 +6,7 @@ nav {
   .btn-busqueda {
     border: none;
     background-color: transparent;
-    translate: -32px;
+    translate: -60px;
 
     i {
       font-size: 1rem;
@@ -19,6 +19,7 @@ nav {
 }
 
 .navbar-nav {
+  gap: 1rem;
   @include netbook {
     margin-right: 7rem;
   }
@@ -33,8 +34,17 @@ nav {
 }
 
 .form-mobile {
-  width: 180px;
+  padding-top: 0.5rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
   @include netbook {
     display: none !important;
   }
+  &__input {
+    width: 70%;
+  }
+}
+.nav-link {
+  display: inline;
 }
