--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -9,3 +9,31 @@
     font-size: 1.2rem;
   }
 }
+.boton-cantidad {
+  border: 1px #4467d6 solid;
+  width: 120px;
+  height: 35px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  grid-column: 1/2;
+  grid-row: 2/3;
+  button {
+    border: none;
+    background-color: transparent;
+    font-size: 1.4rem;
+    color: #4467d6;
+  }
+}
+.btn-trash {
+  background-color: transparent;
+  border: none;
+  grid-column: 3/4;
+  grid-row: 1/2;
+  i {
+    color: black;
+    font-size: 1.3rem;
+  }
+}
