--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,3 +1,8 @@
+body,
+main {
+  background-color: #ebebeb;
+}
+
 .carrusel {
   img {
     width: 100%;
@@ -25,6 +30,7 @@
   &__articulo {
     display: flex;
     flex-direction: row;
+    padding: 0.5rem 0;
     img {
       width: 177.5px;
       height: 150px;
@@ -43,20 +49,83 @@
       overflow-wrap: anywhere;
       text-overflow: ellipsis;
     }
+    .contenedor-descripcion {
+      width: 197.5px;
+      height: 146px;
+    }
   }
   .ofertas__articulo-precio {
     font-size: 1.3rem;
     padding-top: 0.5rem;
   }
   .ofertas__articulo-desc {
-    color: #1be5be;
+    color: #00a650;
   }
+}
+
+.mensaje-vacio {
+  font-size: 1.2rem !important;
+}
+
+.offcanvas-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.btn-redirigir {
+  background-color: #4467d6;
+  color: white;
+  border-radius: 3px;
+  border: none;
+  width: 200px;
+  height: 30px;
 }
 
 .carrito-item {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 50px 20px;
+  grid-template-columns: 1fr 3fr 1fr;
+  justify-content: center;
+  align-items: center;
+  hr {
+    align-self: flex-start;
+    grid-column: 1/4;
+  }
+}
+.carrito-precio {
+  grid-column: 2/4;
+  grid-row: 2/3;
+  justify-self: end;
+  align-self: flex-start;
+  margin: 0;
+  padding: 0 !important;
+}
+
+.carrito-subtotal {
+  grid-column: 2/4;
+  grid-row: 2/3;
+  justify-self: end;
+  align-self: flex-end;
+  margin: 0;
+  padding: 0 !important;
+  font-size: 1.1rem !important;
+}
+
+.resumen-total {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.total-carrito {
+  font-size: 1.5rem !important;
+  color: #4467d6;
+}
+
+.unidades-carrito {
+  font-size: 1.2rem !important;
 }
 
 .envios {
