--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ nav .btn-busqueda i {
 }
 @media (min-width: 991px) {
   .navbar-nav {
-    margin-right: 7rem;
+    padding: 0 !important;
   }
 }
 
@@ -147,31 +147,33 @@ main {
   .ofertas__contenedor {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+  .ofertas__contenedor article:nth-child(3) {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+  .ofertas__contenedor article:nth-child(5) {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  .ofertas__contenedor article:nth-child(9) {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+  .ofertas__contenedor article:nth-child(7) {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+  .ofertas__contenedor article:nth-child(11) {
+    grid-column: 2/3;
+    grid-row: 3/4;
   }
 }
 .ofertas__articulo {
   display: flex;
   flex-direction: row;
   padding: 0.5rem 0;
-}
-@media (min-width: 768px) {
-  .ofertas__articulo-2 {
-    grid-column: 1/2;
-    grid-row: 2/3;
-  }
-}
-@media (min-width: 768px) {
-  .ofertas__articulo-3 {
-    grid-column: 2/3;
-    grid-row: 1/2;
-  }
-}
-@media (min-width: 768px) {
-  .ofertas__articulo-4 {
-    grid-column: 2/3;
-    grid-row: 2/3;
-  }
 }
 .ofertas__articulo img {
   width: 177.5px;
@@ -279,6 +281,11 @@ main {
 .menu {
   margin-top: 2rem;
 }
+@media (min-width: 991px) {
+  .menu {
+    margin-top: 1rem;
+  }
+}
 .menu__list {
   padding-left: 0;
   margin-bottom: 0;
@@ -286,6 +293,7 @@ main {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 @media (min-width: 768px) {
   .menu__list {
@@ -294,10 +302,39 @@ main {
 }
 @media (min-width: 991px) {
   .menu__list {
-    display: none;
+    background-color: #fff;
+    border-radius: 4px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+    display: flex;
+    height: 120px;
+    margin: 0 auto;
+    max-width: 1184px;
+    overflow: hidden;
+  }
+  .menu__list li {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .menu__list li a {
+    width: 70%;
+    border: 1px solid rgb(212, 212, 212);
+    border-radius: 50px;
+  }
+  .menu__list li p {
+    font-size: 17px;
+    align-self: center;
+    margin-bottom: 0;
   }
 }
-.menu__list a img {
+.menu__list a,
+.menu__list button {
+  border: none;
+  background-color: transparent;
+}
+.menu__list a img,
+.menu__list button img {
   width: 90%;
   max-width: 93px;
 }
@@ -348,6 +385,11 @@ main {
   gap: 1rem;
   padding-top: 1rem;
 }
+@media (min-width: 768px) {
+  .categorias {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
 .categorias__articulo {
   height: 169px;
   width: 95%;
@@ -360,7 +402,7 @@ main {
   width: 100%;
 }
 .categorias__articulo a img {
-  width: 40%;
+  max-width: 95px;
 }
 
 .slogan {
@@ -369,9 +411,20 @@ main {
   margin-top: 1rem;
   justify-content: center;
 }
+@media (min-width: 991px) {
+  .slogan {
+    max-height: 100px;
+  }
+}
 .slogan img {
   width: 40%;
   padding: 1rem;
+}
+@media (min-width: 991px) {
+  .slogan img {
+    max-width: 15%;
+    margin-left: 3rem;
+  }
 }
 .slogan p {
   align-self: center;
@@ -380,6 +433,11 @@ main {
   width: 100%;
   text-align: center;
   margin: 0;
+}
+@media (min-width: 991px) {
+  .slogan p {
+    font-size: 2rem;
+  }
 }
 
 .filtro__lista {
