--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -37,37 +37,44 @@ main {
     @include tablet {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr;
+
+
+
+      article:nth-child(3) {
+        grid-column: 2/3;
+        grid-row: 1/2;
+      }
+
+      article:nth-child(5) {
+        grid-column: 1/2;
+        grid-row: 2/3;
+      }
+
+      article:nth-child(9) {
+        grid-column: 2/3;
+        grid-row: 2/3;
+      }
+
+      article:nth-child(7) {
+        grid-column: 1/2;
+        grid-row: 3/4;
+      }
+
+      article:nth-child(11) {
+        grid-column: 2/3;
+        grid-row: 3/4;
+      }
     }
   }
+
 
   &__articulo {
     display: flex;
     flex-direction: row;
     padding: 0.5rem 0;
 
-    &-2 {
-      @include tablet {
-        grid-column: 1/2;
-        grid-row: 2/3;
 
-      }
-    }
-
-    &-3 {
-      @include tablet {
-        grid-column: 2/3;
-        grid-row: 1/2;
-
-      }
-    }
-
-    &-4 {
-      @include tablet {
-        grid-column: 2/3;
-        grid-row: 2/3;
-      }
-    }
 
     img {
       width: 177.5px;
@@ -183,6 +190,10 @@ main {
 .menu {
   margin-top: 2rem;
 
+  @include netbook {
+    margin-top: 1rem;
+  }
+
   &__list {
     padding-left: 0;
     margin-bottom: 0;
@@ -190,16 +201,48 @@ main {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 
     @include tablet {
       justify-content: space-around;
     }
 
     @include netbook {
-      display: none;
+      background-color: #fff;
+      border-radius: 4px;
+      box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .1);
+      display: flex;
+      height: 120px;
+      margin: 0 auto;
+      max-width: 1184px;
+      overflow: hidden;
+
+      li {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+
+        a {
+          width: 70%;
+          border: 1px solid rgb(212, 212, 212);
+          border-radius: 50px;
+        }
+
+        p {
+          font-size: 17px;
+          align-self: center;
+          margin-bottom: 0;
+        }
+      }
     }
 
-    a {
+    a,
+    button {
+      border: none;
+      background-color: transparent;
+
       img {
         width: 90%;
         max-width: 93px;
@@ -212,6 +255,8 @@ main {
       text-align: center;
     }
   }
+
+
 }
 
 .carrusel {
@@ -260,6 +305,10 @@ main {
   gap: 1rem;
   padding-top: 1rem;
 
+  @include tablet {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
   &__articulo {
     height: 169px;
     width: 95%;
@@ -272,7 +321,7 @@ main {
       width: 100%;
 
       img {
-        width: 40%;
+        max-width: 95px;
       }
     }
   }
